Fix modal alignment for 320px screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,14 +333,27 @@ input {
     }
 
     #form {
-        padding: unset;
-        margin: 2em 1.5em;
+        padding: 1em 1em;
+        margin: 2em 5em;
+    }
+
+    #form input {
+        margin: 1em 0 3em -3em;
+    }
+
+    #form #play-btn {
+        margin: 1em 1em;
     }
 
     .game-area {
         height: 275px;
         margin: 1em 0;
         width: 100%;
+    }
+
+    .modal-container {
+        top: 23em;
+        left: 2em;
     }
 
     .score-area {
